# rspec-timing-splitter

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-for-ubuntu.sh
data/: example-parsed.txt  example-rspec-output.xml
spec/folder_should_not_count/: non_covered_spec_a.rb
src/: main.rs  opt.rs
src/timings/: mod.rs  parse.rs  split.rs
tests/: test_split.rs  test_split_pre_bucketed.rs
tests/test_dir/: mod.rs
