[package]
name = "rspec-timing-tool"
version = "0.1.0"
authors = ["Darren Tsung <darren@onesignal.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.14"
failure = "0.1.5"
lazy_static = "1.2.0"
regex = "1.1.0"
serde_json = "1.0.35"
serde = "1.0.84"
serde_derive = "1.0.84"

[dev-dependencies]
log = "0.4.6"
